<resources>
    <string name="app_name">PneumuVision</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Main Activity Strings -->
    <string name="welcome_message">Welcome to PneumoVision app</string>
    <string name="find_resource">Find Your Resource\nHere</string>
    <string name="search_hint">Search</string>
    <string name="messages">Messages</string>
    <string name="favorites">Favorites</string>
    <string name="share">Share</string>
    <string name="date">20 June 2024</string>
    <string name="humidity">45%</string>
    <string name="day">Monday</string>
    <string name="home">Home</string>
    <string name="scan">X-Ray Scan</string>
    <string name="profile">Profile</string>
    <string name="searching_for">Searching for: %1$s</string>
    <string name="profile_clicked">Profile clicked</string>
    <string name="notifications_clicked">Notifications clicked</string>
    <string name="messages_clicked">Messages clicked</string>
    <string name="favorites_clicked">Favorites clicked</string>
    <string name="share_clicked">Share clicked</string>
    <string name="home_clicked">Home clicked</string>
    <string name="scan_clicked">X-Ray Scan clicked</string>
    <string name="profile_menu_clicked">Profile clicked</string>

    <!-- Profile Activity Strings -->
    <string name="user_name">Dewangga Rheza</string>
    <string name="user_email">Dewangga@gmail.com</string>
    <string name="notification">Notification</string>
    <string name="personal_information">Personal Information</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>

    <!-- Email Activity Strings -->
    <string name="send_message">Send a Message</string>
    <string name="send_message_description">Send your message or file directly to the doctor in inbox</string>
    <string name="name_label">Name :</string>
    <string name="email_label">Email :</string>
    <string name="message_label">Message :</string>
    <string name="attach_file">Attach File</string>
    <string name="send_message_button">Send Message</string>
    <string name="title_profile">Profile\n</string>
    <string name="fullname">nama lengkap</string>
    <string name="username">fullname</string>
    <string name="title_sharingpage">menu sharing</string>
    <string name="title_history">History\n</string>
    <string name="title_scan">X-Ray Scan</string>
    <string name="title_home">Home\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">deskripsi</string>
</resources>