<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/email"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.email.EmailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="#4935BC">

                <TextView
                    android:id="@+id/tv_send_message_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/send_message"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_send_message_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="26dp"
                    android:text="@string/send_message_description"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_send_message_title" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteY="250dp">

                    <ImageView
                        android:id="@+id/iv_message_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="68dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/mail"
                        tools:layout_editor_absoluteY="44dp" />

                    <ImageView
                        android:id="@+id/iv_arc_background"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="-11dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:srcCompat="@drawable/arc_1"
                        tools:layout_editor_absoluteX="0dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="350dp">

                <TextView
                    android:id="@+id/tv_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:text="@string/name_label"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="180dp"
                    android:layout_height="53dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/outline"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/et_email"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email_label"
                    app:layout_constraintVertical_bias="0.058" />

                <TextView
                    android:id="@+id/tv_email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:text="@string/email_label"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.633"
                    app:layout_constraintStart_toEndOf="@+id/tv_email_label"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="180dp"
                    android:layout_height="53dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/outline"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.525"
                    app:layout_constraintStart_toStartOf="@+id/tv_email_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email_label"
                    app:layout_constraintVertical_bias="0.058" />

                <TextView
                    android:id="@+id/tv_message_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_label"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="153dp" />

                <EditText
                    android:id="@+id/et_message"
                    android:layout_width="380dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/outline"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/et_message"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email_label"
                    app:layout_constraintVertical_bias="0.811" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btn_attach_file"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#AAA5A5"
                    android:gravity="center"
                    android:text="@string/attach_file"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/attachment"
                    app:layout_constraintEnd_toEndOf="@+id/btn_attach_file"
                    app:layout_constraintHorizontal_bias="0.324"
                    app:layout_constraintStart_toStartOf="@+id/btn_attach_file"
                    tools:layout_editor_absoluteY="10dp"></ImageView>

                <Button
                    android:id="@+id/btn_send_message"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#040404"
                    android:gravity="center"
                    android:text="@string/send_message_button"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="66dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
